[gd_scene load_steps=4 format=3 uid="uid://bp5g1f6khondn"]

[ext_resource type="Script" path="res://Scripts/bullet.gd" id="1_3s2io"]
[ext_resource type="Texture2D" uid="uid://c6cbg5tpeigy6" path="res://Art/sprites/Placeholder/Guns/pellet.png" id="2_dyish"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26j36"]
size = Vector2(1, 1)

[node name="Bullet" type="Area2D"]
script = ExtResource("1_3s2io")

[node name="bullet_collisionshape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_26j36")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.5, 0.5)
texture = ExtResource("2_dyish")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.05, 0.05)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
